[gd_scene load_steps=19 format=3 uid="uid://cmp0y0dj5sym4"]

[ext_resource type="Script" uid="uid://b8ykr0g8riaox" path="res://scripts/choose_cat.gd" id="1_t2xig"]
[ext_resource type="Texture2D" uid="uid://t1obe0j4sfyp" path="res://themes/UI_images/PetScreenBG.png" id="2_qn64d"]
[ext_resource type="Texture2D" uid="uid://dfvkwar5qvqna" path="res://themes/UI_images/Ui.png" id="20_jb4t3"]
[ext_resource type="FontFile" uid="uid://bk0q2iocadv0a" path="res://themes/font/Minecraft.ttf" id="21_46iwk"]
[ext_resource type="Texture2D" uid="uid://camfeilneors3" path="res://themes/UI_images/backButton.png" id="21_lte52"]
[ext_resource type="AudioStream" uid="uid://b8l75uny4mxhh" path="res://assets/soundFX/btn_click.mp3" id="22_yinns"]
[ext_resource type="Texture2D" uid="uid://cesnqosmid6yx" path="res://themes/UI_images/goldIcon.png" id="23_t2xig"]
[ext_resource type="AudioStream" uid="uid://ehqee4dcl01s" path="res://assets/soundFX/coin.mp3" id="25_tjrl5"]

[sub_resource type="Theme" id="Theme_jb4t3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_46iwk"]
texture = ExtResource("20_jb4t3")
region_rect = Rect2(692, 305, 8, 12)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xaho0"]
texture = ExtResource("21_lte52")
region_rect = Rect2(628, 274, 8, 12)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lte52"]
texture = ExtResource("20_jb4t3")
region_rect = Rect2(628, 274, 8, 12)

[sub_resource type="Theme" id="Theme_xaho0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j4d2q"]
texture = ExtResource("20_jb4t3")
region_rect = Rect2(384, 352, 48, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t2xig"]
texture = ExtResource("20_jb4t3")
region_rect = Rect2(384, 288, 48, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yinns"]
texture = ExtResource("20_jb4t3")
region_rect = Rect2(384, 352, 48, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tjrl5"]
texture = ExtResource("20_jb4t3")
region_rect = Rect2(384, 351, 48, 17)

[sub_resource type="Theme" id="Theme_yinns"]

[node name="chooseCat" type="Node2D"]
script = ExtResource("1_t2xig")

[node name="Organizer" type="CanvasLayer" parent="."]

[node name="CenterBG" type="HBoxContainer" parent="Organizer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.456
anchor_right = 0.5
anchor_bottom = 0.456
offset_left = -109.0
offset_top = -95.96
offset_right = 158.0
offset_bottom = 91.04
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Organizer/CenterBG"]
layout_mode = 2
texture = ExtResource("2_qn64d")

[node name="BackButton" type="Button" parent="Organizer"]
offset_left = 6.0
offset_top = 6.0
offset_right = 19.0
offset_bottom = 19.0
theme = SubResource("Theme_jb4t3")
theme_type_variation = &"FlatButton"
theme_override_styles/hover = SubResource("StyleBoxTexture_46iwk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xaho0")
theme_override_styles/normal = SubResource("StyleBoxTexture_lte52")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Organizer/BackButton"]
position = Vector2(-7, -11)
stream = ExtResource("22_yinns")
volume_db = 1.0
pitch_scale = 0.66

[node name="ContinueButton" type="Button" parent="Organizer"]
offset_left = 32.0
offset_top = 5.0
offset_right = 62.0
offset_bottom = 21.0
theme = SubResource("Theme_xaho0")
theme_override_fonts/font = ExtResource("21_46iwk")
theme_override_font_sizes/font_size = 5
theme_override_styles/disabled = SubResource("StyleBoxTexture_j4d2q")
theme_override_styles/hover = SubResource("StyleBoxTexture_t2xig")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yinns")
theme_override_styles/normal = SubResource("StyleBoxTexture_tjrl5")

[node name="price" type="Label" parent="Organizer/ContinueButton"]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 19.0
offset_bottom = 12.0
theme = SubResource("Theme_yinns")
theme_override_fonts/font = ExtResource("21_46iwk")
theme_override_font_sizes/font_size = 6
text = "500"
vertical_alignment = 1

[node name="coin" type="TextureRect" parent="Organizer/ContinueButton/price"]
layout_mode = 0
offset_left = 12.0
offset_right = 16.0
offset_bottom = 5.0
texture = ExtResource("23_t2xig")
expand_mode = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Organizer/ContinueButton"]
stream = ExtResource("25_tjrl5")
volume_db = 1.0
attenuation = 10.1965

[node name="CatList2" type="HBoxContainer" parent="Organizer"]
offset_left = -1.0
offset_top = 22.0
offset_right = 88.0
offset_bottom = 151.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, 0)
limit_left = -100
limit_right = 302
limit_bottom = 600
